--- a/home.css
+++ b/home.css
@@ -272,6 +272,10 @@
   transform: scale(1.05);
 }
 
+.merch-block:hover .merch-block-details-container{
+  transform: scale(1.001);
+}
+
 .merch-block-image-container {
   flex: 1;
   position: relative;
