--- a/assets/shared-styles/artist-page.md.css
+++ b/assets/shared-styles/artist-page.md.css
@@ -5,6 +5,11 @@
 
     .artist-location {
         font-size: 32px;
+        margin-bottom: 30px;
+    }
+
+    .artist-bar {
+        margin: 40px 0 0 0;
     }
 
     .artist-social-icons {
@@ -14,11 +19,11 @@
     .description-section {
         font-size: 24px;
         line-height: 1.5;
-        margin: 70px 0 30px 0;
+        margin: 40px 0 40px 0;
     }
 
     .related-merch-section {
-        padding: 0 20px 150px;
+        padding: 0 20px 60px;
     }
 
     .store-section {
