--- a/roster/roster.md.css
+++ b/roster/roster.md.css
@@ -1,6 +1,6 @@
 @media (max-width: 1280px) {  
   .roster-section {
-    padding: 60px 6vw;
+    padding: 60px 12vw;
   }
 
   .roster-heading {
@@ -9,17 +9,18 @@
   }
 
   .roster-grid {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 3vw;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 4vw;
+    padding: 0;
   }
 
   .artist-block {
     border: 3px solid #0B1215;
   }
 
-  .artist-block-names-container {
+  .artist-block-name-container {
     padding: 6px;
-    border-right: 3px solid #0B1215;
+    border-top: 3px solid #0B1215;
   }
   
   .artist-block-artist-name {
