--- a/roster/roster.sm.css
+++ b/roster/roster.sm.css
@@ -1,7 +1,6 @@
-/* Mobile Media Query */
 @media (max-width: 768px) {
   .roster-section {
-    padding: 60px clamp(1px, 13vw, 45px);
+    padding: 50px 5vw;
   }
 
   .roster-heading {
@@ -11,10 +10,14 @@
   }
 
   .roster-grid {
-    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
-    gap: 9vw;
-    gap: clamp(1px, 9vw, 30px);
-    padding: 0 6vw;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 5vw;
+    padding: 0;
+  }
+
+  .artist-block {
+    max-width: 200px;
+    border: 2px solid #0B1215;
   }
 
   .artist-block:hover .default-image {
@@ -43,20 +46,22 @@
       opacity: 1;
   }
 
-  .artist-block-names-container {
-    padding: 4px;
+  .artist-block-name-container {
+    padding: 2px 4px 0px 4px;
+    border-top: 2px solid #0B1215;
   }
   
   .artist-block-artist-name {
-    font-size: 18px;
-    margin-bottom: 4px;
+    font-size: clamp(14px, 1.5vw, 15px);
+    margin: 0 0 1px 0;
   }
   
   .artist-block-product-name {
-    font-size: 10px;
+    font-size: clamp(8px, 1vw, 10px);
+    margin: 0;
   }
 
   .artist-block-price {
-    font-size: 26px;
+    font-size: clamp(20px, 3vw, 30px);
   }
 }
