--- a/assets/shared-styles/artist-page.base.css
+++ b/assets/shared-styles/artist-page.base.css
@@ -40,7 +40,8 @@
   width: 100%;
   height: auto;
   margin: 0 auto;  
-  max-height: 6500px;
+  max-height: 600px;
+  object-fit: contain;
 }
 
 .artist-image.is-square {
@@ -146,7 +147,7 @@
   align-items: center;
   padding: 0 3vw;
   position: relative;
-  gap: 10px;
+  gap: 40px;
   margin: 0px;
 }
 
@@ -162,10 +163,11 @@
 
 .store-grid {
   display: grid;
-  gap: 1.5vw;
+  gap: 2vw;
   width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
   justify-content: center;
+  padding: 0;
 }
 
 .merch-link {
@@ -188,8 +190,8 @@
   border: 4px solid #0B1215;
   transition: transform 0.3s ease;
   text-transform: uppercase;
-  max-width: 500px;
-  margin: auto;
+  max-width: 380px;
+  margin: 0 auto;
 }
 
 .merch-block:hover {
@@ -255,7 +257,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 8px;
+  padding: 4px 8px 0 8px;
   border-right: 4px solid #0B1215;
   position: relative;
   overflow: hidden;
@@ -264,18 +266,19 @@
 .merch-block-artist-name {
   font-family: "coolvetica", sans-serif;
   font-weight: bold;
-  font-size: 26px;
+  font-size: clamp(18px, 1vw, 20px);
   color: #0B1215;
   max-width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  margin-bottom: 4px;
 }
 
 .merch-block-product-name {
   font-family: "articulat-cf", sans-serif;
   font-weight: 500;
-  font-size: 18px;
+  font-size: clamp(14px, 0.8vw, 18px);
   color: #0B1215;
   max-width: 100%;
   overflow: hidden;
