--- a/assets/shared-styles/artist-page.sm.css
+++ b/assets/shared-styles/artist-page.sm.css
@@ -1,6 +1,6 @@
 @media (max-width: 768px) {
     .artist-section {
-        padding: 30px 30px 0;
+        padding: 30px;
         height: auto;
     }
     
@@ -12,13 +12,13 @@
     .artist-location {
         font-size: 18px;
         line-height: 1;
-        margin: 0 0 20px 0;
+        margin: 0 0 30px 0;
     }
 
     .artist-bar {
         align-items: flex-start;
         flex-direction: column;
-        gap: 40px;
+        gap: 20px;
         margin: 20px 0 0 0;
         align-items: stretch;
     }
@@ -43,7 +43,7 @@
     }
 
     .related-merch-section {
-        padding: 20px 20px 60px;
+        padding: 0 20px 60px 20px;
     }
 
     .related-merch-content {
@@ -53,19 +53,25 @@
     }
 
     .store-section {
-        padding: 0 8vw;
+        padding: 0 2vw;
         margin-bottom: 20px;
+        gap: 10px;
     }
   
     .store-heading {
-        font-size: 42px;
+        font-size: 36px;
         align-self: center;
     }
   
     .store-grid {
-        grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
-        gap: clamp(1px, 9vw, 30px);
-        padding: 0 6vw;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        gap: 2.5vw;
+        padding: 0;
+    }
+
+    .merch-block {
+      max-width: 200px;
+      border: 2px solid #0B1215;
     }
   
     .merch-block:hover .default-image {
@@ -95,19 +101,24 @@
     }
   
     .merch-block-names-container {
-      padding: 4px;
+        padding: 2px 4px 0 4px;
+        border-right: 2px solid #0B1215;
+    }
+
+    .merch-block-details-container {
+        border-top: 2px solid #0B1215;
     }
     
     .merch-block-artist-name {
-      font-size: 18px;
-      margin-bottom: 4px;
+        font-size: clamp(12px, 1vw, 14px);
+        margin-bottom: 0px;
     }
     
     .merch-block-product-name {
-      font-size: 11px;
+        font-size: clamp(8px, 0.8vw, 9px);
     }
   
     .merch-block-price {
-      font-size: 30px;
+        font-size: clamp(8px, 90%, 16px);
     }
 }
