--- a/assets/shared-styles/product-page.base.css
+++ b/assets/shared-styles/product-page.base.css
@@ -185,7 +185,7 @@
     font-style: normal;
     font-size: 28px;
     padding: 50px;
-    margin: 0;
+    margin: 20px 0 0 0;
     text-align: center;
     height: auto;
     line-height: 1.5;
@@ -200,7 +200,7 @@
 .related-merch-section {
     background-color: #0B1215;
     overflow: hidden;
-    padding: 0 100px 200px;
+    padding: 20px 60px 60px 60px;
 }
 
 .related-merch-content {
@@ -226,7 +226,7 @@
     align-items: center;
     padding: 0 3vw;
     position: relative;
-    gap: 10px;
+    gap: 40px;
     margin-bottom: 60px;
 }
 
@@ -242,11 +242,11 @@
 
 .store-grid {
     display: grid;
-    gap: 1.5vw;
+    gap: 2vw;
     width: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
     justify-content: center;
-    padding: 0 4vw;
+    padding: 0;
 }
 
 .merch-link {
@@ -269,8 +269,8 @@
     border: 4px solid #0B1215;
     transition: transform 0.3s ease;
     text-transform: uppercase;
-    max-width: 500px;
-    margin: auto;
+    max-width: 380px;
+    margin: 0 auto;
 }
 
 .merch-block:hover {
@@ -336,7 +336,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 8px;
+    padding: 4px 8px 0 8px;
     border-right: 4px solid #0B1215;
     position: relative;
     overflow: hidden;
@@ -345,18 +345,19 @@
 .merch-block-artist-name {
     font-family: "coolvetica", sans-serif;
     font-weight: bold;
-    font-size: 26px;
+    font-size: clamp(18px, 1vw, 20px);
     color: #0B1215;
     max-width: 100%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    margin-bottom: 4px;
 }
 
 .merch-block-product-name {
     font-family: "articulat-cf", sans-serif;
     font-weight: 500;
-    font-size: 18px;
+    font-size: clamp(14px, 0.8vw, 18px);
     color: #0B1215;
     max-width: 100%;
     overflow: hidden;
