--- a/home.css
+++ b/home.css
@@ -235,18 +235,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 60px 6vw;
+  padding: 60px 13vw;
   overflow: hidden;
   position: relative;
+  padding: 60px 13vw;
 }
 
 .store-grid {
   display: grid;
   gap: 2.5vw;
   width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   justify-content: center;
-  padding: 0 4vw;
+  padding: 0;
 }
 
 .merch-link {
@@ -266,6 +267,8 @@
   border: 4px solid #0B1215;
   transition: transform 0.3s ease;
   text-transform: uppercase;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 .merch-block:hover {
@@ -437,12 +440,13 @@
   }
 
   .store-section {
-    padding: 60px 6vw;
+    padding: 60px 12vw;
   }
 
   .store-grid {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 3vw;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 4vw;
+    padding: 0;
   }
 
   .merch-block {
@@ -558,13 +562,22 @@
   }
 
   .store-section {
-    padding: 60px clamp(1px, 13vw, 45px);
+    padding: 50px 5vw;
   }
 
   .store-grid {
-    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
-    gap: clamp(1px, 9vw, 30px);
-    padding: 0 6vw;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 5vw;
+    padding: 0;
+  }
+
+  .merch-block {
+    max-width: 200px;
+    border: 2px solid #0B1215;
+  }
+
+  .merch-block-details-container {
+    border-top: 2px solid #0B1215;
   }
 
   .merch-block:hover .default-image {
@@ -594,19 +607,21 @@
   }
 
   .merch-block-names-container {
-    padding: 4px;
+    padding: 2px 4px 0px 4px;
+    border-right: 2px solid #0B1215;
   }
   
   .merch-block-artist-name {
-    font-size: 18px;
-    margin-bottom: 4px;
+    font-size: clamp(14px, 1.5vw, 15px);
+    margin: 0 0 1px 0;
   }
   
   .merch-block-product-name {
-    font-size: 11px;
+    font-size: clamp(8px, 1vw, 10px);
+    margin: 0;
   }
 
   .merch-block-price {
-    font-size: 30px;
+    font-size: clamp(20px, 3vw, 30px);
   }
 }
