--- a/roster/roster.base.css
+++ b/roster/roster.base.css
@@ -6,7 +6,7 @@
   align-items: center;
   overflow: hidden;
   position: relative;
-  padding: 60px 6vw;
+  padding: 60px 13vw;
 }
 
 .roster-container {
@@ -35,9 +35,9 @@
   display: grid;
   gap: 2.5vw;
   width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   justify-content: center;
-  padding: 0 4vw;
+  padding: 0;
 }
 
 .artist-link {
@@ -57,6 +57,8 @@
   border: 4px solid #0B1215;
   transition: transform 0.3s ease;
   text-transform: uppercase;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 .artist-block:hover {
