--- a/home.base.css
+++ b/home.base.css
@@ -273,7 +273,11 @@
 }
 
 .merch-block:hover .merch-block-details-container{
-  transform: scale(1.001);
+  transform: scale(1.01);
+}
+
+.merch-block:hover .merch-block-price-container{
+  transform: scale(1.01);
 }
 
 .merch-block-image-container {
