--- a/assets/shared-styles/artist-page.md.css
+++ b/assets/shared-styles/artist-page.md.css
@@ -13,7 +13,7 @@
     }
 
     .artist-bar {
-        margin: 35px 0 0 0;
+        margin: 35px 0px 0px 0px;
         gap: 20px;
     }
 
@@ -35,16 +35,13 @@
         gap: 10px;
     }
 
-    .mcr-player__row {
-    }
-
     .mcr-player__label {
         font-size: 26px;
     }
 
     .mcr-player__track {
         font-size: 16px;
-        margin: 0 10px 0 5px;
+        margin: 0px 10px 0px 5px;
     }
 
     .artist-social-icons {
