--- a/assets/shared-styles/artist-page.md.css
+++ b/assets/shared-styles/artist-page.md.css
@@ -58,6 +58,25 @@
         margin: 40px 0 40px 0;
     }
 
+    .artist-videos {
+        max-width: 1500px;
+        margin: 0 auto;
+        padding: 0 60px 40px 60px;
+        gap: 24px;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+
+    }
+
+    .artist-videos__header {
+        font-size: 46px;
+        margin: 0 0 0 0;
+    }
+
+    .yt-embed iframe {
+        max-width: 100%;
+        min-width: 0px;
+    }
+
     .related-merch-section {
         padding: 20px 20px 60px 20px;
     }
