--- a/assets/shared-styles/header.css
+++ b/assets/shared-styles/header.css
@@ -206,7 +206,7 @@
   }
 
   .header[data-expanded="true"] {
-    --header-height: 220px;
+    --header-height: 270px;
     flex-direction: column;
     align-items: flex-start;
     transition: height 0.3s ease;
@@ -232,7 +232,7 @@
     gap: 40px;
     align-items: center;
     width: 100%;
-    padding: 10px 0;
+    padding: 0 0 10px 0;
     transition: opacity 0.3s ease;
     margin-bottom: 25px;
   }
@@ -292,10 +292,10 @@
   }
 
   .header[data-expanded="true"] ~ .rainbow-strip {
-    top: 220px;
+    top: 270px;
   }
 
   .header[data-expanded="true"] ~ .header-spacer {
-    height: 223px !important;
+    height: 273px !important;
   }
 }
