--- a/assets/shared-styles/product-page.base.css
+++ b/assets/shared-styles/product-page.base.css
@@ -94,6 +94,24 @@
     padding: 0;
 }
 
+.product-dropdown {
+    font-family: "articulat-cf", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 18px;
+    color: #0B1215;
+
+    width: auto;    
+    min-width: 180px; 
+    padding: 14px 44px 9px 16px;
+
+    border: 3px solid #0B1215;
+    background-color: #fff;
+    cursor: pointer;
+    line-height: 1;
+    margin-top: 15px;
+}
+
 .price-and-button {
     display: grid;
     grid-template-columns: 1fr auto auto 1fr;
