--- a/assets/shared-styles/product-page.md.css
+++ b/assets/shared-styles/product-page.md.css
@@ -27,6 +27,13 @@
     margin-top: 2px;
   }
 
+  .product-dropdown {
+    padding: 14px 44px 9px 16px;
+    font-size: 16px;
+    border: 3px solid #0B1215;
+    margin-top: 15px;
+}
+
   .price-and-button {
 
   }
