--- a/assets/shared-styles/product-page.sm.css
+++ b/assets/shared-styles/product-page.sm.css
@@ -31,13 +31,21 @@
       font-size: 16px;
     }
     
+    .product-dropdown {
+      padding: 9px 16px 9px 16px;
+      font-size: 16px;
+      border: 2px solid #0B1215;
+      margin: 15px 0 0 0;
+    }
+
     .price-and-button {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 12px;
+        gap: 0px;
         width: 100%;
+        margin: 10px 0 0 0;
     }
 
     .product-price{
@@ -48,8 +56,6 @@
     .product-buy-button {
         justify-self: center;
         text-align: center;
-        margin-top: 5px;
-        margin-bottom: 15px;
     }
     
     .track-list h3 {
