--- a/home.base.css
+++ b/home.base.css
@@ -42,31 +42,134 @@
   transition: font-size 0.3s ease;
 }
 
-/* Featured Release Section */
 .featured-release {
   width: 100vw;
-  height: 700px;
-  background-color: #0B1215;
+  padding: 60px 50px 0 50px;
+  color: #F3F4F6;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  overflow: hidden;
   align-items: center;
   transition: height 0.3s ease;
   position: relative;
+  overflow: hidden;
+
+  background-image: url("assets/images/products/mcr-016/background.webp");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
 }
 
 .featured-release-hero {
-  flex-shrink: 1;
-  width: 950px;
-  height: auto;
-  margin-left: 5vw;
+  flex: 0 1 1400px;
+  min-width: 0;
+  align-self: flex-end;
+  z-index: 2;
 }
 
 .featured-release-hero img {
-  width: 90%;
+  width: 100%;
   height: auto;
-  object-fit: cover;
+  display: block;
+  max-width: 1500px;
+}
+
+.release-text {
+  flex: 1 1 auto;
+  min-width: 0;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  z-index: 3;
+  color: #2D2D39;
+  margin-bottom: 60px;
+  gap: 60px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.release-heading {
+  margin: 0px;
+  font-family: "articulat-cf", sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  font-style: italic;
+  transition: font-size 0.3s ease;
+  z-index: 3;
+}
+
+.release-title {
+  margin: 0px;
+  font-family: "ringold-sans", sans-serif;
+  font-size: 90px;
+  font-weight: 400;
+  white-space: nowrap;
+  transition: font-size 0.3s ease;
+  z-index: 3;
+}
+
+.rainbow-underline {
+  z-index: 3;
+  margin: 0px;
+  width: 750px;
+  height: 5px;
+  transition: width 0.3s ease;
+  background: linear-gradient(
+    to right,
+    rgba(243, 244, 246, 0) 0%,
+    #FF0000 10%,
+    #FFB300 25%,
+    #FFFF00 40%,
+    #00FF00 55%,
+    #00FFF7 70%,
+    #0000FF 85%,
+    #8E00FF 90%,
+    #8E00FF 100%
+  );
+}
+
+.release-text p {
+  font-family: "articulat-cf", sans-serif;
+  font-weight: 500;
+  font-size: 28px;
+  max-width: 600px;
+  line-height: 1.2;
+  transition: font-size 0.3s ease;
+  z-index: 3;
+  margin: 0px;
+  color: #2D2D39;
+
+  background: linear-gradient(
+    to left,
+    rgba(255,255,255,0.8) 0%,
+    rgba(255,255,255,0.6) 60%,
+    rgba(255,255,255,0) 100%
+  );
+  padding: 10px 12px 6px 10px;
+  border-radius: 20px;
+}
+
+.pre-order-button {
+  width: 254px;
+  height: 84px;
+  background-color: #2D2D39;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  font-family: "coolvetica", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 32px;
+  color: #f2f2f2;
+  text-align: center;
+  transition: transform 0.3s ease;
+  z-index: 3;
+  margin: 0px;
+}
+
+.pre-order-button:hover {
+  transform: scale(1.1);
 }
 
 .falling-shapes {
@@ -87,6 +190,7 @@
   animation: fallAnim 9s linear infinite;
   animation-delay: calc(var(--i) * -2s);
   width: 50px;
+  z-index: 1
 }
 
 .shape:nth-child(3n) {
@@ -134,94 +238,6 @@
     transform: translateX(0px) translateY(800px) rotate(120deg);
     opacity: 0;
   }
-}
-
-.release-text {
-  flex: 1;
-  text-align: right;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
-  padding-right: 50px;
-  align-self: flex-start;
-  z-index: 2;
-}
-
-.release-heading {
-  margin-top: 20px;
-  font-family: "articulat-cf", sans-serif;
-  font-weight: 500;
-  font-size: 30px;
-  font-style: italic;
-  color: #F3F4F6;
-  transition: font-size 0.3s ease;
-  z-index: 2;
-}
-
-.release-title {
-  margin-top: 30px;
-  font-family: "ringold-sans", sans-serif;
-  font-size: 90px;
-  font-weight: 400;
-  color: #F3F4F6;
-  white-space: nowrap;
-  transition: font-size 0.3s ease;
-  z-index: 2;
-}
-
-.rainbow-underline {
-  z-index: 2;
-  margin-top: 20px;
-  width: 750px;
-  height: 5px;
-  transition: width 0.3s ease;
-  background: linear-gradient(
-    to right,
-    rgba(243, 244, 246, 0) 0%,
-    #FF0000 10%,
-    #FFB300 25%,
-    #FFFF00 40%,
-    #00FF00 55%,
-    #00FFF7 70%,
-    #0000FF 85%,
-    #8E00FF 90%,
-    #8E00FF 100%
-  );
-}
-
-.release-text p {
-  margin-top: 60px;
-  font-family: "articulat-cf", sans-serif;
-  font-weight: 500;
-  font-size: 28px;
-  color: #F3F4F6;
-  max-width: 600px;
-  line-height: 1.2;
-  transition: font-size 0.3s ease;
-  z-index: 2;
-}
-
-.pre-order-button {
-  margin-top: 60px;
-  width: 254px;
-  height: 84px;
-  background-color: #f2f2f2;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  font-family: "coolvetica", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-  font-size: 32px;
-  color: #0B1215;
-  text-align: center;
-  transition: transform 0.3s ease;
-  z-index: 2;
-}
-
-.pre-order-button:hover {
-  transform: scale(1.1);
 }
 
 
