--- a/home.sm.css
+++ b/home.sm.css
@@ -4,7 +4,7 @@
   }
 
   .hero-text {
-    top: 15px;
+    top: 25px;
     left: 15px;
   }
 
@@ -18,19 +18,23 @@
   }
 
   .featured-release {
-    height: 400px;
-    flex-direction: column;
+    padding: 30px 15px 0 0px;
+    background-size: cover;
+    background-position: center top;
     position: relative;
   }
 
   .featured-release-hero {
-    width: 66vw;
     position: absolute;
-    order: 2;
-    margin: 0 0 10px 0;
-    bottom: 0px;
-    left: 10px;
-    align-self: flex-start;
+    left: -120px;
+    max-width: 520px;
+    pointer-events: none;
+  }
+
+  .featured-release-hero img {
+    width: 110%;
+    height: auto;
+    display: block;
   }
 
   .falling-shapes {
@@ -42,40 +46,34 @@
   }
 
   .release-text {
-    text-align: right;
-    order: 1;
-    z-index: 0;
-    position: absolute;
-    align-self: flex-end;
-    padding-right: 15px;
+    position: relative;
+    margin-bottom: 30px;
+    gap: 20px;
   }
 
   .release-heading {
     font-size: 17px;
-    margin-top: 15px;
-    margin-bottom: 0;
+    line-height: 0.6;
   }
 
   .release-title {
     font-size: 33px;
-    margin-top: 0px;
   }
 
   .rainbow-underline {
-    width: 280px;
+    width: 250px;
     height: 3px;
-    padding: 0;
-    margin-top: 0;
   }
 
   .release-text p {
     font-size: 16px;
-    max-width: clamp(100px, 80vw, 300px);
-    margin-top: 15px;
+    max-width: 40%;
+
+    padding: 6px 10px 7px 9px;
+    border-radius: 15px;
   }
 
   .pre-order-button {
-    margin-top: 20px;
     width: 140px;
     height: 45px;
     border-radius: 30px;
@@ -95,6 +93,10 @@
   .merch-block {
     max-width: 200px;
     border: 2px solid #0B1215;
+  }
+
+  .merch-block-product-image {
+    transform: scale(1.08);
   }
 
   .merch-block-details-container {
